cmake_minimum_required(VERSION 3.10.2)
project(kadai-ninshiki)
set(CMAKE_CXX_FLAGS "-O2 -Wall")  
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_INSTALL_PREFIX ../)
# include_directories(/usr/include/c++/9)
# link_directories(/usr/lib/gcc/x86_64-linux-gnu/9)
add_executable(file dp.cpp)
target_link_libraries(file -lstdc++fs)
